# torchcpp-qt-template

./: CMakeLists.txt  main.cpp  zz.h
